# hex-terrain

./: .gitignore  CLAUDE.md  Cargo.toml  DEPENDENCY_ANALYSIS.md  Makefile  PLAN.md  README.md  UPDATES.md  history.html  index.html  rust-analyzer.toml
.claude/: settings.json
.claude/agents/: bevy-api-checker.md
.claude/skills/bevy-query/: SKILL.md
.claude/skills/bevy-query/references/: recipes.md  response-format.md  type-paths.md
.claude/skills/cargo-check/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: docs.yml  pages.yml  rust.yml
src/: camera.rs  drone.rs  edges.rs  grid.rs  h_terrain.rs  intro.rs  main.rs  math.rs  petals.rs  terrain.rs  visuals.rs
src/camera/: entities.rs  systems.rs
src/drone/: entities.rs  materials.rs  systems.rs  tests.rs
src/grid/: entities.rs  systems.rs
src/h_terrain/: entities.rs  gaps.rs  h_grid_layout.rs  materials.rs  math.rs  startup_systems.rs  systems.rs  tests.rs
src/intro/: entities.rs  systems.rs
src/petals/: entities.rs  systems.rs
src/terrain/: entities.rs  startup_systems.rs  systems.rs  terrain_hex_layout.rs
src/visuals/: entities.rs  systems.rs
tests/: e2e.mk  e2e_entity_count.sh
v0.0.1/: hex-terrain.d.ts  hex-terrain.js  hex-terrain_bg.wasm.d.ts
v0.0.2/: hex-terrain.d.ts  hex-terrain.js  hex-terrain_bg.wasm.d.ts  index.html
v0.0.3/: hex-terrain.js  index.html
v0.0.4/: hex-terrain.d.ts  hex-terrain.js  hex-terrain_bg.wasm.d.ts  index.html
web/: history.html  index.html  root-index.html
