[package]
name = "hex-terrain"
version = "0.1.0"
edition = "2024"

[dependencies.bevy]
version = "0.18"
features = [
    "std",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_post_process",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "bevy_log",
    "bevy_pbr",
    "bevy_render",
    "bevy_image",
    "bevy_mesh",
    "bevy_camera",
    "bevy_light",
    "bevy_shader",
    "bevy_state",
    "bevy_window",
    "bevy_winit",
    "bevy_remote",
    "hdr",
    "multi_threaded",
    "reflect_auto_register",
    "tonemapping_luts",
    "x11",
]
default-features = false

[dependencies.hexx]
path = "../hexx"
features = ["bevy"]

[dependencies]
noise = "0.9"
clap = { version = "4", features = ["derive"] }
bevy-inspector-egui = "0.36"
bevy_egui = "0.39"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
