[package]
name = "hex-terrain"
version = "0.1.0"
edition = "2024"

[features]
default = ["native"]
native = ["dep:clap", "bevy/x11", "bevy/multi_threaded", "bevy/bevy_remote"]
web = ["bevy/webgl2"]

[dependencies.bevy]
version = "0.18"
features = [
    "std",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_post_process",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "bevy_log",
    "bevy_pbr",
    "bevy_render",
    "bevy_image",
    "bevy_mesh",
    "bevy_camera",
    "bevy_light",
    "bevy_shader",
    "bevy_state",
    "bevy_window",
    "bevy_winit",
    "hdr",
    "reflect_auto_register",
    "tonemapping_luts",
    "bevy_picking",
    "mesh_picking",
]
default-features = false

# [dependencies.hexx]
# path = "../hexx"
# features = ["bevy"]

[dependencies]
noise = "0.9"
clap = { version = "4", features = ["derive"], optional = true }
bevy-inspector-egui = "0.36"
bevy_egui = "0.39"
hexx = { version = "0.24.0", features = ["bevy"] }

[lints.rust]
unused = { level = "deny" }

[lints.clippy]
all = { level = "deny" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = "thin"
strip = "debuginfo"
